we're back! working on principal components graphs. wrote function to extract normalized read counts and calculate principle components from a DGElist object.

--- a/execute.rmd
+++ b/execute.rmd
@@ -56,10 +56,12 @@ animals <- animals %>%
 
 #set rownames
 rownames(animals) <- animals$sample
-```
-```{r}
+
 #Normalize reads
 dge <- normalize_reads(count_data)
+```
+```{r modeling}
+
 
 # Specify parallel processing parameters
 # this is used implicitly by dream() to run in parallel
